# data-engineering-zoomcamp

./: .gitignore
01-docker-terraform/pipeline/: docker-compose.yaml  pipeline.py
02-workflow-orchestration/: application.yaml  docker-compose.yml
02-workflow-orchestration/flows/: 06_gcp_kv.yaml  10_chat_without_rag.yaml  11_chat_with_rag.yaml
03-data-warehouse/: README.md  homework-3.sql  load_yellow_taxi_data.py  pyproject.toml
05-data-platforms/my-taxi-pipeline/pipeline/: pipeline.yml
05-data-platforms/my-taxi-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
05-data-platforms/my-taxi-pipeline/pipeline/assets/reports/: trips_report.sql
05-data-platforms/my-taxi-pipeline/pipeline/assets/staging/: trips.sql
06-batch/: download_data.sh  homework.py  pyproject.toml  spark_gcs.py  spark_sql.py  test_spark.py
07-streaming/: pyproject.toml
07-streaming/homework/src/consumers/: consumer.py
07-streaming/homework/src/job/: tumbling_window_aggregation_largest_tip.py  tumbling_window_aggregation_pickup_location.py
07-streaming/homework/src/producers/: models.py  producer.py
07-streaming/notebooks/: models.py
07-streaming/src/job/: pass_through_job.py
pipeline/: ingest_data.py  notebook.ipynb
workshops/dlt/: open_library_dashboard.py  open_library_pipeline.py  pyproject.toml
workshops/dlt/taxi-pipeline/: pyproject.toml  taxi_dashboard.py  taxi_pipeline.py
