[project]
name = "zoomcamp-workshop-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[workspace]>=1.22.0",
    "marimo>=0.19.0",
    "plotly>=5.0.0",
    "ibis-framework[duckdb]>=11.0.0",
]

[tool.uv.workspace]
members = [
    "taxi-pipeline",
]
